objects/LMS_Product_Eligibility__c.object
<CustomObject>
    <fields>
        <fullName>Certificates__c</fullName>
        <label>Certificates</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exclude_Certification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <formula>ProductLine__r.Name &amp; &apos;-&apos; &amp;  Name</formula>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoOfCertifications__c</fullName>
        <label>Number of Certification Choices</label>
        <summaryForeignKey>LMS_Product_Certifications__c.Product_Eligibility__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Line</label>
        <referenceTo>LMS_ProductLine__c</referenceTo>
        <relationshipLabel>Product Eligibility</relationshipLabel>
        <relationshipName>Product_Eligibility</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is to store OR condition certification on same requirement</description>
        <label>Sub Requirement</label>
        <referenceTo>LMS_Product_Eligibility__c</referenceTo>
        <relationshipLabel>Product Eligibility</relationshipLabel>
        <relationshipName>Product_Eligibility</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Eligibility</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Certificates__c</columns>
        <columns>Exclude_Certification__c</columns>
        <columns>Key__c</columns>
        <columns>NoOfCertifications__c</columns>
        <columns>ProductLine__c</columns>
        <columns>Sub_Requirement__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>REQ-{0}</displayFormat>
        <label>Product Eligibility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Eligibility</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>